--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
