--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "loader": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
+    "react-spinners": "^0.13.8",
     "sass": "^1.69.5",
     "yup": "^1.3.3"
   },
