--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "html-react-parser": "^5.1.10",
     "loader": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
