--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html-react-parser": "^5.1.10",
     "loader": "^2.1.1",
     "react": "^18.2.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
