--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "classnames": "^2.5.1",
     "html-react-parser": "^5.1.10",
     "loader": "^2.1.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-datepicker": "^7.3.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
