--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
