--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.5.1",
     "html-react-parser": "^5.1.10",
     "loader": "^2.1.1",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-datepicker": "^7.3.0",
